[project]
name = "number_chance"
version = "0.0.1"
authors = [
    { name = "saman1000", email="saman1000@gmail.com" }
]
description = "generates numbers based on past frequencies"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "fastapi[standard]>=0.122.0",
    "boto3>=1.41.0",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/saman1000"
Issues = "https://github.com/saman1000/issues"
