[project]
name = "number_chance"
version = "0.0.1"
authors = [
    { name = "saman1000", email="saman1000@gmail.com" }
]
description = "generates numbers based on past frequencies"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "fastapi[standard]>=0.122.0",
    "boto3>=1.41.0",
    "pandas"
]

[project.optional-dependencies]
test = [
    "coverage", # for coverage reporting
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/saman1000"
Issues = "https://github.com/saman1000/issues"

[tool.coverage.run]
# Specify the source code directories to measure
# This ensures that even files not imported during tests are included in the report
source = ["src"]
# Example of omitting files or directories from measurement
# omit = ["src/migrations/*", "venv/*"]

[tool.coverage.report]
# Fail if the overall coverage is below this threshold
fail_under = 70
# Show lines that were missed in the terminal report
show_missing = true
# Exclude specific code constructs from the report (e.g., untestable __repr__ functions)
#exclude_lines = [
#    "if __name__ == .__main__.:",
#    "def __repr__",
#    "pragma: no cover",
#]

[tool.coverage.html]
# Specify the output directory for the HTML report (defaults to htmlcov)
directory = "html_report"
# Optional: skip files with 100% coverage
# skip_covered = true